--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,3 +1,3 @@
 <div style="text-align: center">
-    <a href="https://tygertec.com"><img src="images/tywallscircle120.jpg" alt="Ty Walls" /></a>
+    <a href="https://tygertec.com"><img src="images/course-image-circle120.png" alt="Ty Walls" /></a>
 </div>
